# robot_autonomous_patrol_mono_depth_onnx

./: .gitignore  DELIVERY_REPORT.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.txt  PROJECT_STRUCTURE_MAP.md  PROJECT_SUMMARY.txt  README.md  START_HERE.md  WORKFLOW_RECORDING.md  verify_installation.sh
install/: local_setup.sh  setup.sh
install/autonomous_patrol/lib/autonomous_patrol/: follow_waypoints_node.py
install/autonomous_patrol/share/autonomous_patrol/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mono_depth_onnx/lib/mono_depth_onnx/: depth_inference_node.py  depth_metric_node.py  depth_visualizer_node.py
install/mono_depth_onnx/share/mono_depth_onnx/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/nomeer_robot_ros2/: README.md
src/nomeer_robot_ros2/src/mono_depth_onnx/: B3_B4_IMPLEMENTATION.md  CMakeLists.txt  ESTADO_B2.md  FINAL_STATUS.md  INTEGRATION.md  QUICK_START.md  README.md  RESUMEN_ES.md  TROUBLESHOOTING.md  depth_viewer.py  metrics_monitor.py  visual_evidence.py
src/nomeer_robot_ros2/src/mono_depth_onnx/config/: mono_depth_config.yaml
src/nomeer_robot_ros2/src/mono_depth_onnx/launch/: inference.launch.py
src/nomeer_robot_ros2/src/mono_depth_onnx/models/: midas_v21_small.onnx
src/nomeer_robot_ros2/src/mono_depth_onnx/mono_depth_onnx/: autonomous_depth_safety_node.py  depth_inference_node.py  depth_metric_node.py
src/nomeer_robot_ros2/src/mono_depth_onnx/scripts/: download_midas_model.py
(+52 files in other folders)
